
option java_outer_classname="GetGroupKeysResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetGroupKeysResponse {
	repeated string keys = 1;	
}